--- a/public/pricing.html
+++ b/public/pricing.html
@@ -8,25 +8,28 @@
     <body>
         <header>
             <div>
-                <h1>jambpadi</h1>
+                <h1><a id="logo" href="/">jambpadi</a></h1>
             </div>
             <div>
-                <a href="/">Home</a>
-                <a href="/pricing" class="active">Pricing</a>
+                <a href="/" >Home</a>
+                <a href="/pricing" class='active' >Pricing</a>
                 <a href="/blogs">Blogs</a>
-                <a href="/about">About Us</a>
-                <a href="/contact">Contact Us</a>
-                <a href="/schools">For Schools/Tutorial Centres</a>
+                <a href="/api-reference">API Reference</a>
+                <a href="/">About</a>
+                <a href ="/enterprise">For Schools</a>
             </div>
+
             <div>
-                <a href="/login">LOGIN</a>
+                <a id="login" href="/login">LOGIN</a>
             </div>
         </header>
-        
         <div id="pricing-intro">
             <div id="pricing-content">
                 <h2>Choose Your Plan</h2>
                 <p>Affordable plans for every student preparing for JAMB CBT exams.</p>
+            </div>
+            <div d="control">
+
             </div>
             <div id="plans">
                 <div class="plan">
