--- a/public/homepage.html
+++ b/public/homepage.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Home Page</title>
-        <link rel="stylesheet" href="/homepage.css">
+        <link rel="stylesheet" href="/homepage.css?v=1.1.0">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
