--- a/public/about.html
+++ b/public/about.html
@@ -15,9 +15,9 @@
                 <div id="nav-links">
                     <a href="/" >Home</a>
                     <a href="/pricing">Pricing</a>
-                    <a href="/blogs" class='active'>Blogs</a>
+                    <a href="/blogs">Blogs</a>
                     <a href="/api-reference">API Reference</a>
-                    <a href="/about">About</a>
+                    <a href="/about" class='active'>About</a>
                     <a href ="/enterprise">For Schools</a>
                 </div>
     
@@ -28,9 +28,9 @@
             <div id="drawer">
                     <a href="/" >Home</a>
                     <a href="/pricing">Pricing</a>
-                    <a href="/blogs" class='active'>Blogs</a>
+                    <a href="/blogs">Blogs</a>
                     <a href="/api-reference">API Reference</a>
-                    <a href="/">About</a>
+                    <a href="/about" class='active'>About</a>
                     <a href ="/enterprise">For Schools</a>
     
             </div>
