--- a/public/api_reference.html
+++ b/public/api_reference.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Blogs</title>
-        <link rel="stylesheet" href="/homepage.css?v=1.1.3">
+        <link rel="stylesheet" href="/homepage.css?v=1.1.2">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -15,9 +15,9 @@
                 <div id="nav-links">
                     <a href="/" >Home</a>
                     <a href="/pricing">Pricing</a>
-                    <a href="/blogs" class='active'>Blogs</a>
-                    <a href="/api-reference">API Reference</a>
-                    <a href="/about">About</a>
+                    <a href="/blogs">Blogs</a>
+                    <a href="/api-reference" class='active'>API Reference</a>
+                    <a href="/">About</a>
                     <a href ="/enterprise">For Schools</a>
                 </div>
     
@@ -28,9 +28,9 @@
             <div id="drawer">
                     <a href="/" >Home</a>
                     <a href="/pricing">Pricing</a>
-                    <a href="/blogs" class='active'>Blogs</a>
-                    <a href="/api-reference">API Reference</a>
-                    <a href="/">About</a>
+                    <a href="/blogs">Blogs</a>
+                    <a href="/api-reference" class='active'>API Reference</a>
+                    <a href="/about">About</a>
                     <a href ="/enterprise">For Schools</a>
     
             </div>
