--- a/public/pricing.html
+++ b/public/pricing.html
@@ -2,27 +2,38 @@
 <html>
     <head>
         <title>Pricing</title>
-        <link rel="stylesheet" href="/pricing.css">
+        <link rel="stylesheet" href="/homepage.css?v=1.1.3">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <header>
-            <div>
-                <h1><a id="logo" href="/">jambpadi</a></h1>
+        <body>
+            <header>
+                <div id="menu-bar"><button id="menu-button">&#x2630;</button></div>
+                <div>
+                    <h1><a id="logo" href="/">jambpadi</a></h1>
+                </div>
+                <div id="nav-links">
+                    <a href="/" >Home</a>
+                    <a href="/pricing" class='active'>Pricing</a>
+                    <a href="/blogs">Blogs</a>
+                    <a href="/api-reference">API Reference</a>
+                    <a href="/about">About</a>
+                    <a href ="/enterprise">For Schools</a>
+                </div>
+    
+                <div>
+                    <a id="login" href="/login">LOGIN</a>
+                </div>
+            </header>
+            <div id="drawer">
+                    <a href="/" >Home</a>
+                    <a href="/pricing" class='active'>Pricing</a>
+                    <a href="/blogs">Blogs</a>
+                    <a href="/api-reference">API Reference</a>
+                    <a href="/about">About</a>
+                    <a href ="/enterprise">For Schools</a>
+    
             </div>
-            <div>
-                <a href="/" >Home</a>
-                <a href="/pricing" class='active' >Pricing</a>
-                <a href="/blogs">Blogs</a>
-                <a href="/api-reference">API Reference</a>
-                <a href="/">About</a>
-                <a href ="/enterprise">For Schools</a>
-            </div>
-
-            <div>
-                <a id="login" href="/login">LOGIN</a>
-            </div>
-        </header>
         <div id="pricing-intro">
             <div id="pricing-content">
                 <h2>Choose Your Plan</h2>
@@ -71,5 +82,7 @@
                 </div>
             </div>
         </div>
+
+        <script src="general.js"></script>
     </body>
 </html>
