--- a/public/enterprise.html
+++ b/public/enterprise.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Enterprise | Jambpadi</title>
-        <link rel="stylesheet" href="/homepage.css?v=1.1.3">
+        <link rel="stylesheet" href="/homepage.css?v=1.1.5">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -16,7 +16,7 @@
                     <a href="/pricing">Pricing</a>
                     <a href="/blogs">Blogs</a>
                     <a href="/api-reference">API Reference</a>
-                    <a href="/">About</a>
+                    <a href="/about">About</a>
                     <a href ="/enterprise" class='active'>For Schools</a>
                 </div>
     
@@ -29,7 +29,7 @@
                     <a href="/pricing">Pricing</a>
                     <a href="/blogs">Blogs</a>
                     <a href="/api-reference">API Reference</a>
-                    <a href="/">About</a>
+                    <a href="/about">About</a>
                     <a href ="/enterprise" class='active'>For Schools</a>
     
             </div>
